--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,7 +1,7 @@
-$font-stack:    Helvetica, sans-serif;
 $primary-color: #333;
 
 body {
+  font-family: 'Vollkorn', serif;
   columns: 300px 2;
   color: $primary-color;
   display: flex;
