zavrsen heading napokon, zapoceto o Nama i Prijava

--- a/app/assets/styles/geoteh.scss
+++ b/app/assets/styles/geoteh.scss
@@ -1,3 +1,5 @@
-@import '_variables.scss';
-@import 'geoteh-global/_globalstyle.scss';
-@import 'geoteh-modules/_header.scss';
+@import 'global-styles/_variables.scss';
+@import 'global-styles/_mixins.scss';
+@import 'global-styles/_globalstyle.scss';
+@import 'global-styles/_header.scss';
+@import 'geoteh-modules/_mainpage.scss';
