--- a/app/assets/styles/global-styles/_variables.scss
+++ b/app/assets/styles/global-styles/_variables.scss
@@ -2,7 +2,8 @@ $mainblack: #0F0A0A;
 $ghost-white: #FBFBFF;
 $imperial-blue: #0B4F6C;
 $cyan: #01B1EF;
-$mainorange: #FF7F07;
+$main-orange: #FF7F07;
 $malachite: #20BF55;
 $strong-green: #018730;
 $sonic-silver: #757575;
+$main-gray: #D1CABC;
