ubacen skelet za sve stranice osim za glavnu i za nauku

--- a/app/assets/styles/geoteh.scss
+++ b/app/assets/styles/geoteh.scss
@@ -3,3 +3,5 @@
 @import 'global-styles/_globalstyle.scss';
 @import 'global-styles/_header.scss';
 @import 'geoteh-modules/_mainpage.scss';
+@import 'usluge-modules/_sekcija.scss';
+@import 'projekti-modules/_projekti.scss';
