--- a/app/assets/styles/geoteh.scss
+++ b/app/assets/styles/geoteh.scss
@@ -2,6 +2,8 @@
 @import 'global-styles/_mixins.scss';
 @import 'global-styles/_globalstyle.scss';
 @import 'global-styles/_header.scss';
+@import 'global-styles/_footer.scss';
 @import 'geoteh-modules/_mainpage.scss';
+@import 'geoteh-modules/_extra-info.scss';
 @import 'usluge-modules/_sekcija.scss';
 @import 'projekti-modules/_projekti.scss';
